fix(scroll): slightly tweak flicker fix (#758)

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -62,7 +62,6 @@ main {
   min-height: 70vh;
   @media (max-width: 767px) {
     margin: 5px auto 15px;
-    min-height: 100vh;
   }
 }
 
